Fix max image width distortion on mobile

--- a/docs/.vuepress/styles/index.styl
+++ b/docs/.vuepress/styles/index.styl
@@ -58,3 +58,7 @@ main.page {
     color: $dark;
   }
 }
+
+.theme-default-content:not(.custom) img {
+  max-width: 100%;
+}
